--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ BD_NOMBRE=proyectoreadni
 BD_USER=root
 BD_PASSWORD=root
 BD_HOST=localhost
+
+EMAIL_HOST= smtp.mailtrap.io
+EMAIL_PORT= 2525
+EMAIL_USER= f0b2a8fe506730
+EMAIL_PASSWORD= 7a0269063d5d3f
