--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "reeadni",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,6 +18,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.25.0"
   }
 }
