--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BD_NOMBRE=proyectoreadni
+BD_NOMBRE=estoesuntest
 BD_USER=root
 BD_PASSWORD=root
 BD_HOST=localhost
@@ -7,3 +7,7 @@ EMAIL_HOST= smtp.mailtrap.io
 EMAIL_PORT= 2525
 EMAIL_USER= f0b2a8fe506730
 EMAIL_PASSWORD= 7a0269063d5d3f
+
+PORT = 3000
+BACKEND_URL= http://localhost
+
